--- a/WPF/StudentManagement/WpfApplication1/Views/CreateStudentView.xaml
+++ b/WPF/StudentManagement/WpfApplication1/Views/CreateStudentView.xaml
@@ -6,6 +6,11 @@
         xmlns:local="clr-namespace:WpfApplication1.Views"
         mc:Ignorable="d"
         Title="CreateStudentView" Height="420" Width="300">
+    
+    <Window.Resources>
+        <XmlDataProvider x:Key="XmlData" Source="student_sample_data.xml"/>
+    </Window.Resources>
+    
     <StackPanel>
 
         <!-- New Student text block -->
@@ -29,7 +34,7 @@
             <TextBlock Text="First Name *" Margin="5" Grid.Column="0" Grid.Row="1"/>
             <TextBlock Text="Last Name *" Margin="5" Grid.Column="0" Grid.Row="2"/>
             <TextBlock Text="Birthdate *" Margin="5" Grid.Column="0" Grid.Row="3"/>
-            <TextBox x:Name="StudentID" Margin="5" Padding="3" Grid.Column="1" Grid.Row="0"/>
+            <TextBox x:Name="StudentId" Margin="5" Padding="3" Grid.Column="1" Grid.Row="0"/>
             <TextBox x:Name="FirstName" Margin="5" Padding="3" Grid.Column="1" Grid.Row="1"/>
             <TextBox x:Name="LastName" Margin="5" Padding="3" Grid.Column="1" Grid.Row="2"/>
             <DatePicker x:Name="birthdatebox" Margin="5" Padding="3" Grid.Column="3" Grid.Row="3"/>
@@ -61,7 +66,7 @@
             <TextBlock Text="Address" Margin="5 5 5 5" Grid.Column="0" Grid.Row="0"/>
             <TextBlock Text="Email" Margin="5 5 5 5" Grid.Column="0" Grid.Row="1"/>
             <TextBlock Text="Class" Margin="5 5 5 5" Grid.Column="0" Grid.Row="2"/>
-            <TextBox x:Name="addressbox"  Margin="5" Padding="3" Grid.Column="1" Grid.Row="0"/>
+            <TextBox x:Name="addressbox" Margin="5" Padding="3" Grid.Column="1" Grid.Row="0"/>
             <TextBox x:Name="emailbox" Margin="5" Padding="3" Grid.Column="1" Grid.Row="1"/>
             <ComboBox x:Name="classbox" Margin="5" Padding="3" Grid.Column="1" Grid.Row="2">
                 <ComboBoxItem Content="18DTHQA1"/>
@@ -79,7 +84,7 @@
             <Button Content="View Transcript" Margin="5" Padding="3" Grid.Column="0"/>
             <Button x:Name="SaveButton" Content="Save" Margin="5" Padding="5" Grid.Column="1"/>
             <Button x:Name="CancelButton" Content="Cancel" Margin="5" Padding="5" Grid.Column="2"/>
-            <TextBox x:Name="MyProperty"/>
         </Grid>
+        
     </StackPanel>
 </Window>
