--- a/WPF/StudentManagement/WpfApplication1/Views/MainView.xaml
+++ b/WPF/StudentManagement/WpfApplication1/Views/MainView.xaml
@@ -39,10 +39,14 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TextBox Margin="3" Padding="3" Grid.Column="0"></TextBox>
-            <ComboBox Text="--Class--" Margin="3" Padding="3" Grid.Column="1"></ComboBox>
-            <Button Content="Search" Margin="3" Padding="3" Grid.Column="2"></Button>
-            <Button x:Name="ClearCheck" Content="Reset" Margin="3" Padding="3" Grid.Column="3"></Button>
+            <TextBox Text="{Binding Path=SearchBar, UpdateSourceTrigger=PropertyChanged}" Margin="3" Padding="3" Grid.Column="0"></TextBox>
+            <ComboBox x:Name="SelectedClass" Text="--Class--" Margin="3" Padding="3" Grid.Column="1">
+                <ComboBoxItem Content="18DTHQA1"/>
+                <ComboBoxItem Content="18DTHQA2"/>
+                <ComboBoxItem Content="18DTHQA3"/>
+            </ComboBox>
+            <Button x:Name="Search" Content="Search" Margin="3" Padding="3" Grid.Column="2"></Button>
+            <Button x:Name="ClearButton" Content="Clear" Margin="3" Padding="3" Grid.Column="3"></Button>
         </Grid>
         
         <!-- Student table -->
@@ -52,7 +56,7 @@
                     <GridViewColumn>
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox x:Name="CheckStudent"/>
+                                <CheckBox IsChecked="{Binding Path=Checked, Mode=OneWayToSource}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
