--- a/WPF/StudentManagement/WpfApplication1/Views/MainView.xaml
+++ b/WPF/StudentManagement/WpfApplication1/Views/MainView.xaml
@@ -13,7 +13,7 @@
         <Border BorderBrush="Black" BorderThickness="1" Margin="3">
             <Menu>
                 <MenuItem x:Name="CreateStuButton" Header="Create new Student" Margin="5" />
-                <MenuItem Header="Delete Student(s)" Margin="5" />
+                <MenuItem x:Name="RemoveButton" Header="Delete Student(s)" Margin="5" />
                 <MenuItem x:Name="ModifyButton" Header="Modify" Margin="5" />
             </Menu>
         </Border>
@@ -54,7 +54,7 @@
                     <GridViewColumn>
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox IsChecked="{Binding Path=Checked, Mode=OneWayToSource}"/>
+                                <CheckBox IsChecked="{Binding Path=Check}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
