--- a/WPF/StudentManagement/WpfApplication1/Views/CreateStudentView.xaml
+++ b/WPF/StudentManagement/WpfApplication1/Views/CreateStudentView.xaml
@@ -37,18 +37,19 @@
             <TextBlock Text="Last Name *" Margin="5" Grid.Column="0" Grid.Row="2"/>
             <TextBlock Text="Birthdate *" Margin="5" Grid.Column="0" Grid.Row="3"/>
             <TextBox 
-                Text="{Binding Path=StudentId, ValidatesOnDataErrors=True,UpdateSourceTrigger=PropertyChanged}" 
+                Text="{Binding Path=StudentId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
                 ToolTip="{Binding ErrorCollection[StudentId]}"                     
                 Margin="5" Padding="3" Grid.Column="1" Grid.Row="0"/>
             <TextBox 
-                Text="{Binding Path=FirstName, ValidatesOnDataErrors=True,UpdateSourceTrigger=PropertyChanged}" 
+                Text="{Binding Path=FirstName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
                 ToolTip="{Binding ErrorCollection[FirstName]}"
                 Margin="5" Padding="3" Grid.Column="1" Grid.Row="1"/>
             <TextBox 
-                Text="{Binding Path=LastName, ValidatesOnDataErrors=True,UpdateSourceTrigger=PropertyChanged}" 
-                ToolTip="{Binding ErrorCollection[LastName]}" Margin="5" Padding="3" Grid.Column="1" Grid.Row="2"/>
+                Text="{Binding Path=LastName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+                ToolTip="{Binding ErrorCollection[LastName]}" 
+                Margin="5" Padding="3" Grid.Column="1" Grid.Row="2"/>
             <DatePicker 
-                Text="{Binding Path=BirthDate, ValidatesOnDataErrors=True,UpdateSourceTrigger=PropertyChanged}" 
+                Text="{Binding Path=BirthDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
                 ToolTip="{Binding ErrorCollection[BirthDate]}"
                 Margin="5" Padding="3" Grid.Column="3" Grid.Row="3"/>
         </Grid>
@@ -67,7 +68,7 @@
                     ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged, 
                     Converter={StaticResource ResourceKey=GenderConverter}, 
-                    ConverterParameter=True}" 
+                    ConverterParameter=Male}" 
                 ToolTip="{Binding ErrorCollection[Gender]}"
                 Content="Male" Margin="5" Grid.Column="1" />
             <RadioButton 
@@ -76,7 +77,7 @@
                     ValidatesOnDataErrors=True, 
                     UpdateSourceTrigger=PropertyChanged, 
                     Converter={StaticResource ResourceKey=GenderConverter}, 
-                    ConverterParameter=False}"
+                    ConverterParameter=Female}"
                 ToolTip="{Binding ErrorCollection[Gender]}"
                 Content="Female" Margin="5" Grid.Column="2" />
         </Grid>
